--- a/assets/style.css
+++ b/assets/style.css
@@ -4,14 +4,14 @@
 }
 
 .nav{
-    width: 100%;
-    height: 50px;
-    padding: 5px 0px;
+    padding: 10px 0px 10px 0px ;
     background-color: aquamarine;
     text-align: right;
 }
 
 .nav a{
-    margin-right: 50px;
+    margin: 50px 50px 10px 50px;
+    
+
     text-decoration: none;
 }
